# sgi

./: .gitignore  .travis.yml  CMakeLists.txt  Export.in  LICENSE.txt  README.md  SGIHostSupport.in  sgi.kdev4
CMakeModules/: .gitignore  FindFFmpeg.cmake  FindGammaray.cmake  FindLog4cplus.cmake  FindOSG.cmake  FindOsgEarth.cmake  FindOsgQt.cmake  FindosgAnimation.cmake  (+5 more)
gammaray/log4cplus/: CMakeLists.txt  gammaray_log4cplus.json  log4cplus_model.cpp  log4cplus_model.h  log4cplus_plugin.cpp  log4cplus_plugin.h  log4cplus_widget.cpp  log4cplus_widget.h  log4cplus_widget.ui
plugins/: CMakeLists.txt  plugin_config.h.cmake
plugins/log4cplus/: CMakeLists.txt  ContextMenuLog4cplus.cpp  ContextMenuLog4cplus.h  MenuActionLog4cplus.cpp  MenuActionLog4cplus.h  ObjectTreeLog4cplus.cpp  ObjectTreeLog4cplus.h  SGIItemLog4cplus  getObjectInfoLog4cplus.cpp  getObjectInfoLog4cplus.h  sgi_log4cplus_plugin.cpp  sgi_log4cplus_plugin.h  writeHTMLLog4cplus.cpp  writeHTMLLog4cplus.h
plugins/osg/: CMakeLists.txt  CameraSettings.cpp  CameraSettings.h  CameraSettings.ui  ContextMenuOSG.cpp  ContextMenuOSG.h  DrawableHelper.cpp  DrawableHelper.h  ExtraViewDialog.cpp  ExtraViewDialog.h  ExtraViewDialog.ui  FindTopMostNodeOfType  GUIAdapterOSG.cpp  GUIAdapterOSG.h  ImagePreviewDialog.cpp  ImagePreviewDialog.h  ImagePreviewDialog.ui  ManipulateObject.h  MenuActionOSG.cpp  MenuActionOSG.h  NodeHelper.cpp  NodeHelper.h  ObjectLoggerOSG.cpp  ObjectLoggerOSG.h  ObjectTreeOSG.cpp  ObjectTreeOSG.h  SGIItemOsg  SGIItemOsg.h  SceneGraphDialogOsg.cpp  SceneGraphDialogOsg.h  SettingsDialogOSG.cpp  SettingsDialogOSG.h  getObjectInfoOSG.cpp  getObjectInfoOSG.h  osg_accessor.cpp  osg_accessor.h  osganimation_accessor.h  osgdb_accessor.h  osgtext_accessor.h  osgviewer_accessor.h  (+28 more)
plugins/osgearth/: AutoClipPlaneCullCallbackDialog.cpp  AutoClipPlaneCullCallbackDialog.h  AutoClipPlaneCullCallbackDialog.ui  CMakeLists.txt  ContextMenuOSGEarth.cpp  ContextMenuOSGEarth.h  ElevationQueryReferenced  GUIAdapterOSGEarth.cpp  GUIAdapterOSGEarth.h  LODScaleOverrideDialog.cpp  LODScaleOverrideDialog.h  LODScaleOverrideDialog.ui  LightSettings.cpp  LightSettings.h  LightSettings.ui  MenuActionOSGEarth.cpp  MenuActionOSGEarth.h  ObjectTreeOSGEarth.cpp  ObjectTreeOSGEarth.h  ProxySettingsDialog.cpp  ProxySettingsDialog.h  ProxySettingsDialog.ui  RetrieveElevationDialog.cpp  RetrieveElevationDialog.h  RetrieveElevationDialog.ui  SGIItemOsgEarth  SettingsDialogOSGEarth.cpp  SettingsDialogOSGEarth.h  ShaderEditorDialog.cpp  ShaderEditorDialog.h  ShaderEditorDialog.ui  ShaderFunctionDetails.cpp  ShaderFunctionDetails.h  ShaderFunctionDetails.ui  TileInspectorDialog.cpp  TileInspectorDialog.h  TileInspectorDialog.ui  elevquery_ref.h  geo_helpers.cpp  geo_helpers.h  (+11 more)
plugins/qt/: CMakeLists.txt  ContextMenuQt.cpp  ContextMenuQt.h  ImagePreviewDialog.cpp  ImagePreviewDialog.h  ImagePreviewDialog.ui  MenuActionQt.cpp  MenuActionQt.h  ObjectTreeQt.cpp  ObjectTreeQt.h  SGIItemQt  SGIItemQt.h  SettingsDialogQt.cpp  SettingsDialogQt.h  getObjectInfoQt.cpp  getObjectInfoQt.h  qt_string_helpers  sgi_qt_plugin.cpp  std_ostream_qt.h  string_helpers.h  writeHTMLQt.cpp  writeHTMLQt.h  writeHTMLQtMeta.cpp  writeHTMLQtPaintDevice.cpp  writeHTMLQtQPA.cpp
plugins/qtquick/: CMakeLists.txt  ContextMenuQtQuick.cpp  ContextMenuQtQuick.h  MenuActionQtQuick.cpp  MenuActionQtQuick.h  ObjectTreeQtQuick.cpp  ObjectTreeQtQuick.h  SGIItemQtQuick  SettingsDialogQtQuick.cpp  SettingsDialogQtQuick.h  getObjectInfoQtQuick.cpp  sgi_qtquick_plugin.cpp  writeHTMLQtQuick.cpp  writeHTMLQtQuick.h
plugins/vsg/: CMakeLists.txt  ContextMenuVsg.cpp  ContextMenuVsg.h  MenuActionVsg.cpp  MenuActionVsg.h  ObjectTreeVsg.cpp  ObjectTreeVsg.h  SGIItemVsg  getObjectInfoVsg.cpp  getObjectInfoVsg.h  sgi_vsg_plugin.cpp  stdafx.h  writeHTMLVsg.cpp  writeHTMLVsg.h
src/plugin_impl/: CMakeLists.txt  ImagePreviewDialogBase.cpp  ImagePreviewDialogBase.ui  ObjectTreeImpl.cpp  ObjectTreeImplProxy.cpp  ObjectTreeImplProxy.h  ObjectTreeImplProxy_p.h  ReferencePicker.cpp  SGIDataItemBase.cpp  SGIImage.cpp  SGIImageOsg.cpp  SGIImageQt.cpp  SGIItemBase.cpp  SGIShaderLoader.cpp  SGIShaderLoaderQt.cpp  functionImplBase.cpp  osg_drawable_helpers.cpp  osg_helpers.cpp  osg_node_helpers.cpp  osg_statistics.cpp  osg_viewer.cpp  qimage_osg.cpp  qt_dds_reader.cpp  qt_helpers.cpp  qt_string_helpers.cpp  string_helpers.cpp  vsg_helpers.cpp  vsg_node_helpers.cpp  widget_helpers.cpp  widget_helpers.h
src/sgi/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  ContextMenu.cpp  ContextMenu.h  DoubleInputDialog.cpp  DoubleInputDialog.h  DoubleInputDialog.ui  ImageGLWidget.cpp  ImageGLWidget.frag.glsl  ImageGLWidget.h  ImageGLWidget.vert.glsl  ImagePreviewDialog.cpp  ImagePreviewDialog.h  ImagePreviewDialog.ui  ImageQtWidget.cpp  ImageQtWidget.h  ImageScrollArea.cpp  ImageScrollArea.h  MatrixInputDialog.cpp  MatrixInputDialog.h  MatrixInputDialog.ui  ObjectLoggerDialog.cpp  ObjectLoggerDialog.h  ObjectLoggerDialog.ui  ObjectTreeImpl.h  QTextDialog.cpp  QTextDialog.h  QTextDialog.ui  QtProxy.cpp  QtProxy.h  QuatInputDialog.cpp  QuatInputDialog.h  QuatInputDialog.ui  ReferencedPicker.h  SGIPlugin.cpp  SGIPlugin.h  SceneGraphDialog.cpp  SceneGraphDialog.h  (+19 more)
src/sgi/sgi/: AutoLoadQt  ContextMenuQt  Export  Export.in  ObjectLoggerDialog  SGIItemInternal  SceneGraphDialog
src/sgi/sgi/helpers/: TypelistMacros.h  qt_helper
src/sgi/sgi/plugins/: ObjectLoggerBase  ObjectTreeImpl  SGIHostItemBase.h  SGIHostItemGenerator  SGIHostItemModel.h  SGIHostItemOsg.h  SGIHostItemQt.h  SGIHostSupport  SGIHostSupport.in  SGIItemBase.h  SGIItemOsg  SGIItemOsgEarth  SGIPluginImpl.h  SGIPluginInterface.h  SGIPluginMacros.h  SGIProxyItem.h  SGISettingsDialogImpl  model_support.h  qt_support.h
tests/: CMakeLists.txt  item_osg_unittest.cpp  item_osg_unittest.h  item_osgearth_unittest.cpp  item_osgearth_unittest.h  item_qt_unittest.cpp  item_qt_unittest.h  item_unittest.cpp  item_unittest.h  itemtree_unittest.cpp  itemtree_unittest.h  props_unittest.cpp  props_unittest.h  variadic_unittest.cpp  variadic_unittest.h
(+160 files in other folders)
