#
# FAST Protect GmbH: SGI
#
# Project is hosted on:
# https://github.com/aroth-fastprotect/sgi
#
#
# History: 
# 2015-02-16  ARO  initial release

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0 FATAL_ERROR) 

# Include custom CMake modules or macros. Don't touch it.
SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../buildtools/CMakeModules;${CMAKE_MODULE_PATH}")
INCLUDE(FastProtectMacros)

FAST_PROJECT(SGI)

FAST_IS_SYSTEM_LIBRARY(sgi SGI_IS_SYSTEM_LIB)
IF(NOT SGI_IS_SYSTEM_LIB)

	SET(SGI_MAJOR_VERSION 0)
	SET(SGI_MINOR_VERSION 3)
	SET(SGI_PATCH_VERSION 0)
	SET(SGI_BUILD_VERSION 0)
	SET(SGI_SOVERSION     0)

	SET(SGI_PLUGIN_PREFIX "")

	IF (CYGWIN)
		SET(SGI_PLUGIN_PREFIX "cygwin_")
	ENDIF()

	IF(MINGW)
		SET(SGI_PLUGIN_PREFIX "mingw_")
	ENDIF()

	SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

	SET(SGI_VERSION ${SGI_MAJOR_VERSION}.${SGI_MINOR_VERSION}.${SGI_PATCH_VERSION})

	SET(SGI_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

	FIND_PACKAGE(OpenGL)
	FAST_PACKAGE_QT4()
	FAST_PACKAGE_LOG4CPLUS()
	find_package(OSG 3.2.0 REQUIRED)
	find_package(OsgEarth)

	IF(WIN32)
        # More MSVC specific compilation flags
        ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS -D_CRT_SECURE_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS)
	ENDIF(WIN32)

	IF(CMAKE_COMPILER_IS_GNUCXX)
		ADD_DEFINITIONS(-std=c++11)
	ELSEIF(CLANG)
		ADD_DEFINITIONS(-std=c++11 -Wno-deprecated-register -Wno-switch)
	ENDIF()

	# Make the headers visible to everything
	INCLUDE_DIRECTORIES(
		${OSG_INCLUDE_DIR}
		${QT_INCLUDES}
	)
	INCLUDE_DIRECTORIES(BEFORE
		${SGI_INCLUDE_DIR}
		)
    INCLUDE(SGIFunctions)
	fast_configure_file(CMakeModules/SGIMacros.cmake.in CMakeModules/SGIMacros.cmake @ONLY)
	INCLUDE(SGIMacros)
	FAST_INSTALL_DATA_FILE(CMakeModules/SGIMacros.cmake DESTINATION share/cmake/modules COMPONENT "Developer files")

	SET(SGI_PLUGIN_IMPL_LIBRARY osgSGI-plugin-impl)

    set(SGI_PLUGIN_HOST_SUPPORT_INCLUDES)
    set(SGI_PLUGIN_HOST_SUPPORT_ITEM_CLASSES)
    set(SGI_PLUGIN_FALLBACK ON)
    SGI_PLUGIN_HOST_SUPPORT(osg Osg)
    SGI_PLUGIN_HOST_SUPPORT(osgearth OsgEarthConfig OsgEarthConfigOptions)
    SGI_PLUGIN_HOST_SUPPORT(log4cplus Log4cplus)
    SGI_PLUGIN_HOST_SUPPORT(qt Qt QtMeta)
    SGI_PLUGIN_HOST_SUPPORT(fallback Fallback)

    TO_LIST_NEWLINES(SGI_PLUGIN_HOST_SUPPORT_INCLUDES SGI_PLUGIN_HOST_SUPPORT_INCLUDES)
    TO_LIST_COMMA(SGI_PLUGIN_HOST_SUPPORT_ITEM_CLASSES SGI_PLUGIN_HOST_SUPPORT_ITEM_CLASSES)
    fast_configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SGIHostSupport.in ${SGI_INCLUDE_DIR}/sgi/plugins/SGIHostSupport)

    FAST_INSTALL_EXTRA_HEADER_FILES(DIRECTORY ${SGI_INCLUDE_DIR}/sgi DESTINATION include/sgi)

	OPTION(SGI_PLUGIN_OSG "Enable OSG plugin" ON)
	OPTION(SGI_PLUGIN_OSGEARTH "Enable osgEarth plugin" ${OSGEARTH_FOUND})
	OPTION(SGI_PLUGIN_QT "Enable Qt plugin" ON)
	OPTION(SGI_PLUGIN_LOG4CPLUS "Enable log4cplus plugin" ${LOG4CPLUS_FOUND})

	# SGI Core
	ADD_SUBDIRECTORY(src)

	# SGI Plugins
	ADD_SUBDIRECTORY(plugins)

	add_subdirectory(applications)
	
	FAST_PROJECT_PACKAGE()

ENDIF(NOT SGI_IS_SYSTEM_LIB)
