MACRO(SGI_UNITTEST NAME)

    OPTION(SGI_UNITEST_${NAME} "Build SGI unit test ${NAME}" OFF)
    IF(SGI_UNITEST_${NAME})
        set(TARGET_SRC ${NAME}_unittest.cpp)
        set(TARGET_MOC_H ${NAME}_unittest.h)

        list(APPEND TARGET_LIBRARIES_VARS
            OSG_LIBRARY
            OSGDB_LIBRARY
            OPENTHREADS_LIBRARY
            SGI_PLUGIN_IMPL_LIBRARY
            QT_QTCORE_LIBRARY
            QT_QTGUI_LIBRARY
            QT_QTTEST_LIBRARY
            )
        IF ( Qt5Widgets_FOUND )
            LIST(APPEND TARGET_LIBRARIES_VARS QT_QTWIDGETS_LIBRARY )
        ENDIF()
        LIST(APPEND TARGET_DEFINITIONS QT_GUI_LIB QT_WIDGETS_LIB)

        FAST_COMMANDLINE_APPLICATION(sgi_${NAME}_unittest)
    ENDIF()
ENDMACRO(SGI_UNITTEST)

SGI_UNITTEST(item)
SGI_UNITTEST(variadic)
SGI_UNITTEST(itemtree)
